Projet ProgWeb Compte/transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-deployment
  namespace: default
  labels:
    app: transaction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
      - name: transaction
        image: amine219/transaction-service:1  # Remplace par ton image si besoin
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: transaction
  ports:
  - port: 3001
    targetPort: 3001
