Projet ProgWeb Compte/solds-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solds-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solds-service
            port:
              number: 3000
      - path: /add
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 3001
      - path: /subtract
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 3001
      - path: /transfer
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 3001
